@@ -1417,7 +1417,7 @@ GUI_SPELLCHECKER_TITLE=Spellchecker Setup
 
 GUI_SPELLCHECKER_AUTOSPELLCHECKCHECKBOX=&Automatically check the spelling of text
 
-GUI_SPELLCHECKER_AVAILABLE_LABEL=Available languages:
+GUI_SPELLCHECKER_AVAILABLE_LABEL=Dictionaries already installed:
 
 GUI_SPELLCHECKER_DICTIONARYLABEL=Dictionary file folder:
 
@@ -1425,9 +1425,9 @@ GUI_SPELLCHECKER_FILE_CHOOSER_TITLE=Dictionary File Folder
 
 GUI_SPELLCHECKER_DIRECTORYCHOOSERBUTTON=&Choose...
 
-GUI_SPELLCHECKER_INSTALLBUTTON=&Install...
+GUI_SPELLCHECKER_INSTALLBUTTON=&Install new dictionary...
 
-GUI_SPELLCHECKER_UNINSTALLBUTTON=&Uninstall...
+GUI_SPELLCHECKER_UNINSTALLBUTTON=&Remove
 GUI_SPELLCHECKER_URL_LABEL=URL of online dictionaries:
 
 GUI_SPELLCHECKER_UNINSTALL_CURRENT=You are uninstalling the spellchecking dictionary that your project currently uses. Proceed?
