@@ -1,7 +1,7 @@
 ----------------------------------------------------------------------
  OmegaT 2.5.2
 ----------------------------------------------------------------------
-   5 Enhancements
+   6 Enhancements
    1 Bug fix
    4 Localisation updates
 ----------------------------------------------------------------------
@@ -25,6 +25,8 @@ and Mark Untranslated.
 
   - Display of the corresponding colours in the View menu for "Mark" 
 menu entries
+
+  - Clarification of the Options > Spell Checking... dialog
 
   Bug fixes:
 
